crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_optional_basic_for_condition_and_bare_return.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class OptionalFlowExpressions {
  void method() {
    for (;;) {
      return;
    }
  }
}

diagnostics:
(none)
