crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_parenthesized_concise_lambda_parameter_list.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ConciseLambdaParameterList {
  void method() {
    java.util.function.BinaryOperator<Integer> add = (x, y) -> x + y;
  }
}

diagnostics:
(none)
