crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_parenthesized_postfix_increment.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ParenthesizedPostfixIncrement {
  void statement(int value) {
    (value)++;
  }

  int expression(int value) {
    return (value)++ + 1;
  }

  int decrement(int value) {
    return (value)-- - 1;
  }
}

diagnostics:
(none)
