crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_primary_qualified_class_instance_creation.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class PrimaryQualifiedCreation {
  void method() {
    Object inner = new Outer().new Inner();
  }
}

class Outer {
  class Inner {
  }
}

diagnostics:
(none)
