crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_primitive_and_void_class_literals.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class PrimitiveClassLiterals {
  void method() {
    Object intClass = int.class;
    Object booleanClass = boolean.class;
    Object voidClass = void.class;
  }
}

diagnostics:
(none)
