crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_primitive_array_method_reference.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class PrimitiveArrayMethodReference {
  void method() {
    java.util.function.IntFunction<int[]> factory = int[]::new;
  }
}

diagnostics:
(none)
