crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_primitive_cast_inside_binary_expression.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class PrimitiveCastBinaryExpression {
  int method(Object x) {
    return (int) x + 1;
  }
}

diagnostics:
(none)
