crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_qualified_contextual_keyword_local_types.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class QualifiedContextualKeywordLocalTypes {
  void method() {
    var.Type x;
    yield.Type y;
  }
}

diagnostics:
(none)
