crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_qualified_receiver_parameter.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ReceiverOuter {
  class ReceiverInner {
    void method(ReceiverOuter ReceiverOuter.this) {
    }
  }
}

diagnostics:
(none)
